<resources>
    <string name="app_name">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="contact_name">Name Surname</string>
    <string name="contact_number">984949498</string>
    <string name="contact_email">example@.com</string>
    <string name="save_button">Save</string>
    <string name="edit_button">Edit</string>
    <string name="back_button">Back</string>
    <string name="delete_button">Delete</string>
</resources>